# skills/src/swagger/skill-api.json
@@ -1,8 +1,8 @@
 {
     "openapi": "3.0.1",
     "info": {
-        "title": "task-service",
-        "description": "This is a sample task microservice",
+        "title": "skills-service",
+        "description": "This is a sample skills microservice",
         "version": "1.0.0"
     },
     "servers": [
@@ -11,14 +11,14 @@
         }
     ],
     "paths": {
-        "/api/todo/{Id}": {
+        "/api/skills/{id}": {
             "get": {
-                "tags": ["task"],
-                "summary": "get a single task by id",
-                "operationId": "getTask",
+                "tags": ["skills"],
+                "summary": "get a single skill by id",
+                "operationId": "getSkill",
                 "parameters": [
                     {
-                        "$ref": "#/components/parameters/Id"
+                        "$ref": "#/components/parameters/id"
                     }
                 ],
                 "responses": {
@@ -31,7 +31,7 @@
                                         "data": {
                                             "type": "array",
                                             "items": {
-                                                "$ref": "#/components/schemas/TaskData"
+                                                "$ref": "#/components/schemas/SkillData"
                                             }
                                         }
                                     }
@@ -59,11 +59,11 @@
                 }
             }
         },
-        "/api/todo/all": {
+        "/api/skills/all": {
             "get": {
-                "tags": ["task"],
-                "summary": "retrieve all tasks of a current user",
-                "operationId": "getAllTasks",
+                "tags": ["skills"],
+                "summary": "retrieve all skills from database",
+                "operationId": "getAllSkills",
                 "responses": {
                     "200": {
                         "description": "successful operation",
@@ -74,7 +74,7 @@
                                         "data": {
                                             "type": "array",
                                             "items": {
-                                                "$ref": "#/components/schemas/TaskData"
+                                                "$ref": "#/components/schemas/SkillData"
                                             }
                                         }
                                     }
@@ -102,19 +102,19 @@
                 }
             }
         },
-        "/api/todo/destroy": {
+        "/api/skills/destroy": {
             "post": {
-                "tags": ["task"],
-                "summary": "delete a task",
+                "tags": ["skills"],
+                "summary": "delete a skill by id",
                 "operationId": "deleteTask",
                 "requestBody": {
-                    "description": "delete task from the backend",
+                    "description": "delete skill from the backend",
                     "required": true,
                     "content": {
                         "application/json": {
                             "schema": {
                                 "properties": {
-                                    "Id": {
+                                    "id": {
                                         "type": "string"
                                     }
                                 }
@@ -157,25 +157,19 @@
                 }
             }
         },
-        "/api/todo/add": {
+        "/api/skills/add": {
             "post": {
-                "tags": ["task"],
-                "summary": "add a task",
-                "operationId": "addTask",
+                "tags": ["skills"],
+                "summary": "add a skill",
+                "operationId": "addSkill",
                 "requestBody": {
-                    "description": "add task to the backend",
+                    "description": "add skill to the backend",
                     "required": true,
                     "content": {
                         "application/json": {
                             "schema": {
                                 "properties": {
-                                    "title": {
-                                        "type": "string"
-                                    },
-                                    "body": {
-                                        "type": "string"
-                                    },
-                                    "completed": {
+                                    "name": {
                                         "type": "string"
                                     }
                                 }
@@ -193,7 +187,7 @@
                                         "data": {
                                             "type": "array",
                                             "items": {
-                                                "$ref": "#/components/schemas/TaskData"
+                                                "$ref": "#/components/schemas/SkillData"
                                             }
                                         }
                                     }
@@ -221,29 +215,26 @@
                 }
             }
         },
-        "/api/todo/update": {
+        "/api/skills/update": {
             "post": {
-                "tags": ["task"],
-                "summary": "edit a task",
-                "operationId": "EditTask",
+                "tags": ["skills"],
+                "summary": "edit a skill",
+                "operationId": "EditSkill",
                 "requestBody": {
-                    "description": "edit task data in the backend",
+                    "description": "edit skill data in the backend",
                     "required": true,
                     "content": {
                         "application/json": {
                             "schema": {
                                 "properties": {
-                                    "Id": {
+                                    "id": {
                                         "type": "string"
                                     },
-                                    "title": {
-                                        "type": "string"
+                                    "course": {
+                                        "$ref": "#/components/schemas/Course"
                                     },
-                                    "body": {
-                                        "type": "string"
-                                    },
-                                    "completed": {
-                                        "type": "string"
+                                    "book": {
+                                        "$ref": "#/components/schemas/Book"
                                     }
                                 }
                             }
@@ -260,7 +251,7 @@
                                         "data": {
                                             "type": "array",
                                             "items": {
-                                                "$ref": "#/components/schemas/TaskData"
+                                                "$ref": "#/components/schemas/SkillData"
                                             }
                                         }
                                     }
@@ -291,8 +282,8 @@
     },
     "components": {
         "parameters": {
-            "Id": {
-                "name": "Id",
+            "id": {
+                "name": "id",
                 "in": "path",
                 "description": "Task Id values that need to be considered for filter",
                 "required": true,
@@ -314,28 +305,49 @@
                     }
                 }
             },
-            "TaskData": {
+            "SkillData": {
                 "type": "object",
                 "properties": {
-                    "id": {
+                    "_id": {
                         "type": "string"
                     },
-                    "created_at": {
+                    "name": {
                         "type": "string"
                     },
-                    "updated_at": {
+                    "version": {
+                        "type": "number"
+                    },
+                    "dbStatus": {
                         "type": "string"
                     },
-                    "title": {
+                    "course": {
+                        "$ref": "#/components/schemas/Course"
+                    },
+                    "books": {
+                        "$ref": "#/components/schemas/Book"
+                    }
+                }
+            },
+            "Course": {
+                "type": "object",
+                "nullable": true,
+                "properties": {
+                    "_id": {
                         "type": "string"
                     },
-                    "body": {
+                    "name": {
+                        "type": "string"
+                    }
+                }
+            },
+            "Book": {
+                "type": "object",
+                "nullable": true,
+                "properties": {
+                    "_id": {
                         "type": "string"
                     },
-                    "completed": {
-                        "type": "boolean"
-                    },
-                    "userid": {
+                    "name": {
                         "type": "string"
                     }
                 }
